feat(chainthru-server): count EP
